<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.dineshbalajivenkataraman.views.MultipleChoice">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/question"
            android:textSize="24sp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/questOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_one"
                android:textSize="20sp" />
            <RadioButton
                android:id="@+id/questTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_two"
                android:textSize="20sp" />
            <RadioButton
                android:id="@+id/questThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_three"
                android:textSize="20sp" />
            <RadioButton
                android:id="@+id/questFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_four"
                android:textSize="20sp" />
        </RadioGroup>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="120dp"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>
