<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.dineshbalajivenkataraman.views.QuizScore">
    <TextView
        android:id="@+id/yourScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:text="@string/score"
        android:textAlignment="center"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/totalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.34"
        android:text="@string/score_total"
        android:textAlignment="center"
        android:textSize="160sp" />
    <Button
        android:id="@+id/homePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:text="@string/back_to_home" />
</LinearLayout>
