<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.dineshbalajivenkataraman.views.InputText">
    <TextView
        android:id="@+id/inputQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:text="@string/input_question"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:inputType="textAutoComplete"/>
    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:hint="@string/input_answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="96dp" />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="60dp"
        android:layout_weight="0.02"
        android:text="@string/input_submit" />
</LinearLayout>
