<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.dineshbalajivenkataraman.quizapp.HomePageActivity">
    <TextView
        android:id="@+id/history_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.32"
        android:background="#E57373"
        android:gravity="center"
        android:text="@string/historyquiz"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/computer_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:background="#64B5F6"
        android:gravity="center"
        android:text="@string/computerquiz"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/science_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.32"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/sciencequiz"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>
